Bug 404572: don't show multiple quit dialogs if you cancel the quit on the first one, patch by Håkan Waara <hwaara@gmail.com> and Graeme McCutcheon <graememcc_firefox@graeme-online.co.uk>, r=me