toolkit/components/downloads/src/nsDownloadManager.cpp
@@ -1718,6 +1718,12 @@ nsDownloadManager::ConfirmCancelDownloads(PRInt32 aCount,
                                           const PRUnichar *aCancelMessageSingle,
                                           const PRUnichar *aDontCancelButton)
 {
+  // If user has already dismissed quit request, then do nothing
+  PRBool quitRequestCancelled = PR_FALSE;
+  aCancelDownloads->GetData(&quitRequestCancelled);
+  if (quitRequestCancelled)
+    return;
+
   nsXPIDLString title, message, quitButton, dontQuitButton;
 
   mBundle->GetStringFromName(aTitle, getter_Copies(title));
